# gprocess

./: .gitignore  README.md  pyproject.toml  tree.txt
.ipynb_checkpoints/: README-checkpoint.md
core/: main.py  numerical.py
core/.ipynb_checkpoints/: kernel-checkpoint.py
optimisation/: __init__.py  cgl.py  scg.py
optimisation/.ipynb_checkpoints/: __init__-checkpoint.py
pyd/: pybind11.pyd
src/core/: __init__.py  prediction.py
src/core/.ipynb_checkpoints/: numerical-checkpoint.py
src/gprocess/: __init__.py
src/gprocess/core/: .numerical.py.swp  gprocess.py  kernel.py  likelihood.py  main.py  matrix.py  numerical.py  prediction.py
src/gprocess/optimisation/: cgl.py
src/gprocess/optimization/: cgl.py  scg.py
src/gprocess/util/: sampler.py
src/optimisation/: __init__.py
src/pyd/: pybind11.pyd
