[tool.poetry]
name = "gprocess"
version = "0.1.0"
description = ""
authors = ["Utashi Fujimoto <frusciante2580@gmail.com>"]
readme = "README.md"
packages = [{include = "gprocess", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
